--- a/index.html
+++ b/index.html
@@ -67,100 +67,98 @@
       <section class="features">
         <div class="container">
           <h2 class="features-title visually-hidden">Features</h2>
-          <div class="features-container">
-            <ul class="features-list">
-              <li class="features-item">
-                <h3 class="features-subtitle">Strategy</h3>
-                <p class="features-text">
-                  Our goal is to identify the business problem to walk away with
-                  the perfect and creative solution.
-                </p>
-              </li>
-              <li class="features-item">
-                <h3 class="features-subtitle">Punctuality</h3>
-                <p class="features-text">
-                  Bring the key message to the brand's audience for the best
-                  price within the shortest possible time.
-                </p>
-              </li>
-              <li class="features-item">
-                <h3 class="features-subtitle">Diligence</h3>
-                <p class="features-text">
-                  Research and confirm brands that present the strongest digital
-                  growth opportunities and minimize risk.
-                </p>
-              </li>
-              <li class="features-item">
-                <h3 class="features-subtitle">Technologies</h3>
-                <p class="features-text">
-                  Design practice focused on digital experiences. We bring forth
-                  a deep passion for problem-solving.
-                </p>
-              </li>
-            </ul>
-          </div>
+          <!-- <div class="features-container"> -->
+          <ul class="features-list">
+            <li class="features-item">
+              <h3 class="features-subtitle">Strategy</h3>
+              <p class="features-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Punctuality</h3>
+              <p class="features-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Diligence</h3>
+              <p class="features-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Technologies</h3>
+              <p class="features-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+          <!-- </div> -->
         </div>
       </section>
       <!-- team -->
       <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
-          <div class="team-container">
-            <ul class="team-list">
-              <li class="team-item">
-                <img
-                  class="team-item-image"
-                  src="./images/img1.jpg"
-                  alt="Mark Guerrero"
-                  width="264"
-                  height="260"
-                />
-                <div class="team-item-desc">
-                  <h3 class="team-item-subtitle">Mark Guerrero</h3>
-                  <p class="team-item-text">Product Designer</p>
-                </div>
-              </li>
-              <li class="team-item">
-                <img
-                  class="team-item-image"
-                  src="./images/img2.jpg"
-                  alt="Tom Ford"
-                  width="264"
-                  height="260"
-                />
-                <div class="team-item-desc">
-                  <h3 class="team-item-subtitle">Tom Ford</h3>
-                  <p class="team-item-text">Frontend Developer</p>
-                </div>
-              </li>
-              <li class="team-item">
-                <img
-                  class="team-item-image"
-                  src="./images/img3.jpg"
-                  alt="Camila Garcia"
-                  width="264"
-                  height="260"
-                />
-                <div class="team-item-desc">
-                  <h3 class="team-item-subtitle">Camila Garcia</h3>
-                  <p class="team-item-text">Marketing</p>
-                </div>
-              </li>
-              <li class="team-item">
-                <img
-                  class="team-item-image"
-                  src="./images/img4.jpg"
-                  alt="Daniel Wilson"
-                  width="264"
-                  height="260"
-                />
-                <div class="team-item-desc">
-                  <h3 class="team-item-subtitle">Daniel Wilson</h3>
-                  <p class="team-item-text">UI Designer</p>
-                </div>
-              </li>
-            </ul>
-          </div>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                class="team-item-image"
+                src="./images/img1.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <div class="team-item-desc">
+                <h3 class="team-item-subtitle">Mark Guerrero</h3>
+                <p class="team-item-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-item-image"
+                src="./images/img2.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <div class="team-item-desc">
+                <h3 class="team-item-subtitle">Tom Ford</h3>
+                <p class="team-item-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-item-image"
+                src="./images/img3.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <div class="team-item-desc">
+                <h3 class="team-item-subtitle">Camila Garcia</h3>
+                <p class="team-item-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-item-image"
+                src="./images/img4.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <div class="team-item-desc">
+                <h3 class="team-item-subtitle">Daniel Wilson</h3>
+                <p class="team-item-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
       <!-- portfolio -->
